--- a/src/table/table.scss
+++ b/src/table/table.scss
@@ -3,3 +3,9 @@
 .wheat-table {
   color: #fa0;
 }
+.virtual-table-cell {
+  box-sizing: border-box;
+  padding: 8px;
+  border-bottom: 1px solid #f0f0f0;
+  border-right: 1px solid #f0f0f0;
+}
